--- a/index.html
+++ b/index.html
@@ -188,7 +188,12 @@
     </div>
     <div class="subject-content">
       <ul>
+        <li><a href="biologia/metody-badawcze-w-biologii.pdf" target="_blank">Metody badawcze w biologii</a></li>
+        <li><a href="biologia/Woda i pierwiastki.pdf" target="_blank">Woda i pierwiastki chemiczne</a></li>
+        <li><a href="biologia/Sacharydy.pdf" target="_blank">Sacharydy (cukry)</a></li>
+        <li><a href="biologia/Lipidy.pdf" target="_blank">Lipidy (tłuszcze)</a></li>
         <li><a href="biologia/Aminokwasy.pdf" target="_blank">Aminokwasy</a></li>
+        <li><a href="biologia/Białka_i_KwasyNukleinowe.pdf" target="_blank">Białka i Kwasy Nukleinowe</a></li>
       </ul>
     </div>
   </div>
@@ -200,6 +205,8 @@
     </div>
     <div class="subject-content">
       <ul>
+        <li><a href="geografia/kartkówka-źródłageo-metody.pdf" target="_blank">Źródła geograficzne i metody</a></li>
+        <li><a href="geografia/kartkówka-współrzędnegeo.pdf" target="_blank">Współrzędne geograficzne</a></li>
         <li><a href="geografia/Ruch_Obiegowy_Czasnaziemi.pdf" target="_blank">Ruch Obiegowy i Czas na Ziemi</a></li>
       </ul>
     </div>
@@ -237,6 +244,7 @@
     <div class="subject-content">
       <ul>
         <li><a href="historia/Historia_jako_nauka.pdf" target="_blank">Historia jako nauka</a></li>
+         <li><a href="historia/Mezopotamia_Egipt_Izrael.pdf" target="_blank">Mezopotamia, Egipt, Izrael - DZIAŁ 1</a></li>
       </ul>
     </div>
   </div>
@@ -273,6 +281,9 @@
     <div class="subject-content">
       <ul>
         <li><a href="edb/EDB_alarmowanie_i_ostrzeganie.pdf" target="_blank">Alarmowanie i Ostrzeganie</a></li>
+        <li><a href="edb/EDB_Pierwsza_Pomoc.pdf" target="_blank">Pierwsza pomoc</a></li>
+        <li><a href="edb/EDB_PodstawyPP.pdf" target="_blank">Podstawy Pierwszej Pomocy</a></li>
+        
       </ul>
     </div>
   </div>
@@ -321,6 +332,7 @@
     <div class="subject-content">
       <ul>
         <li><a href="hiszpanski/La_Familia.pdf" target="_blank">La Familia (rodzina)</a></li>
+        <li><a href="hiszpanski/Podstawowe_zwroty_i_liczby.pdf" target="_blank">Podstawowe zwroty i liczby</a></li>
       </ul>
     </div>
   </div>
@@ -344,7 +356,8 @@
     </div>
     <div class="subject-content">
       <ul>
-        <li><a href="." target="_blank">.</a></li>
+        <li><a href="inne/1T2_PLAN_I_KONSULTACJE.pdf" target="_blank">Plan lekcji + Terminy konsultacji</a></li>
+        <li><a href="inne/statut_LO_XI_ujednolicony_2024-25.pdf" target="_blank">Statut szkoły</a></li>
       </ul>
     </div>
   </div>
