--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
     </div>
     <div class="subject-content">
       <ul>
-        <li><a href="." target="_blank">.</a></li>
+        <li><a href="muzyka/epoki_muzyki.pdf" target="_blank">Historia Muzyki w epokach</a></li>
       </ul>
     </div>
   </div>
