--- a/index.html
+++ b/index.html
@@ -245,6 +245,7 @@
       <ul>
         <li><a href="historia/Historia_jako_nauka.pdf" target="_blank">Historia jako nauka</a></li>
          <li><a href="historia/Mezopotamia_Egipt_Izrael.pdf" target="_blank">Mezopotamia, Egipt, Izrael - DZIAŁ 1</a></li>
+        <li><a href="historia/KulturaGrecji.pdf" target="_blank">Kultura i Sport w Grecji</a></li>
       </ul>
     </div>
   </div>
