--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
 <header>
   <h1>📚 Notatki mg</h1>
-  <p>Zbiór wszystkich notatek</p>
+  <p>Zbiór notatek</p>
 </header>
 
 <div class="search-container">
@@ -188,12 +188,12 @@
     </div>
     <div class="subject-content">
       <ul>
-        <li><a href="biologia/metody-badawcze-w-biologii.pdf" target="_blank">Metody badawcze w biologii</a></li>
-        <li><a href="biologia/Woda i pierwiastki.pdf" target="_blank">Woda i pierwiastki chemiczne</a></li>
-        <li><a href="biologia/Sacharydy.pdf" target="_blank">Sacharydy (cukry)</a></li>
-        <li><a href="biologia/Lipidy.pdf" target="_blank">Lipidy (tłuszcze)</a></li>
-        <li><a href="biologia/Aminokwasy.pdf" target="_blank">Aminokwasy</a></li>
-        <li><a href="biologia/Białka_i_KwasyNukleinowe.pdf" target="_blank">Białka i Kwasy Nukleinowe</a></li>
+        <li><a href="biologia/metody-badawcze-w-biologii.pdf" target="_blank">Metody badawcze w biologii (1.1)</a></li>
+        <li><a href="biologia/Woda i pierwiastki.pdf" target="_blank">Woda i pierwiastki chemiczne (2.1)</a></li>
+        <li><a href="biologia/Sacharydy.pdf" target="_blank">Sacharydy (cukry) (2.2)</a></li>
+        <li><a href="biologia/Lipidy.pdf" target="_blank">Lipidy (tłuszcze) (2.3)</a></li>
+        <li><a href="biologia/Aminokwasy.pdf" target="_blank">Aminokwasy (2.4)</a></li>
+        <li><a href="biologia/Białka_i_KwasyNukleinowe.pdf" target="_blank">Białka i Kwasy Nukleinowe (2.4, 2.5, 2.6)</a></li>
       </ul>
     </div>
   </div>
@@ -245,7 +245,7 @@
       <ul>
         <li><a href="historia/Historia_jako_nauka.pdf" target="_blank">Historia jako nauka</a></li>
          <li><a href="historia/Mezopotamia_Egipt_Izrael.pdf" target="_blank">Mezopotamia, Egipt, Izrael - DZIAŁ 1</a></li>
-        <li><a href="historia/KulturaGrecji.pdf" target="_blank">Kultura i Sport w Grecji</a></li>
+        <li><a href="historia/KulturaGrecji.pdf" target="_blank">Sport i kultura w Starożytnej Grecji (Temat 12)</a></li>
       </ul>
     </div>
   </div>
