--- a/index.html
+++ b/index.html
@@ -246,6 +246,7 @@
         <li><a href="historia/Historia_jako_nauka.pdf" target="_blank">Historia jako nauka</a></li>
          <li><a href="historia/Mezopotamia_Egipt_Izrael.pdf" target="_blank">Mezopotamia, Egipt, Izrael - DZIAŁ 1</a></li>
         <li><a href="historia/KulturaGrecji.pdf" target="_blank">Sport i kultura w Starożytnej Grecji (Temat 12)</a></li>
+         <li><a href="historia/GRECJA.pdf" target="_blank">STAROŻYTNA GRECJA (SPRAWDZIAN DZIAŁ 2)</a></li>
       </ul>
     </div>
   </div>
