--- a/index.html
+++ b/index.html
@@ -207,7 +207,8 @@
       <ul>
         <li><a href="geografia/kartkówka-źródłageo-metody.pdf" target="_blank">Źródła geograficzne i metody</a></li>
         <li><a href="geografia/kartkówka-współrzędnegeo.pdf" target="_blank">Współrzędne geograficzne</a></li>
-        <li><a href="geografia/Ruch_Obiegowy_Czasnaziemi.pdf" target="_blank">Ruch Obiegowy i Czas na Ziemi</a></li>
+        <li><a href="geografia/Ruch_Obiegowy_Czasnaziemi.pdf" target="_blank">Ruch Obrotowy i Czas na Ziemi</a></li>
+        <li><a href="Ruch_Obiegowy.pdf" target="_blank">Ruch Obiegowy</a></li>
       </ul>
     </div>
   </div>
